{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Movement",
            "id": "b5bda26d-d9d8-4848-a6aa-fb3b2b5be076",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "10df39e0-feb6-4e75-b4aa-fb29252196d6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "211651b2-7e63-42b6-b905-c2669d7b5656",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "053d7e6d-53aa-4f62-9304-ec6a0396ddf2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6a4b9aae-52fe-4a2c-b3f4-5c9aa9d08625",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "38fdb886-b74c-4ff5-8392-88589c806bc8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "18d6b024-6373-4470-97f8-17285560b7a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Combat",
            "id": "14b4afc4-764e-493e-8c6d-247a12c33086",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e4dad99f-b9e9-4426-af2b-fb0c4c863006",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "KeepingAttack",
                    "type": "Button",
                    "id": "2da468c6-a2c2-4c4a-a958-c6be2d2fdf60",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "86941316-5211-49a2-b972-ea9c954c843a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill1",
                    "type": "Button",
                    "id": "0612a0d9-fe8d-4fbe-bcef-879a5df0f065",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Skill2",
                    "type": "Button",
                    "id": "68afdbbe-e02b-43d5-9056-12dcffad2ae2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialSkill",
                    "type": "Button",
                    "id": "f484a6b9-05cf-492a-b44f-38c59e138b07",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8984a208-3569-4e40-b09b-ffcc9b80dc73",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "141568a7-22e8-4df2-8b9d-0c94640ba684",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.2,pressPoint=0.2)",
                    "processors": "",
                    "groups": "",
                    "action": "KeepingAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec3813a0-7f51-4efd-bf27-599569bae3d1",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c1012e4a-187b-4806-9abc-c5c27e678597",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e2cee1a-f7c5-4ce6-a9bb-fbb3cf27b511",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82078207-00ee-4bf6-a576-3ae9a81f9b06",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SaveAndLoad",
            "id": "db9e0745-01dd-4eaf-a598-6a65fb59dc5e",
            "actions": [
                {
                    "name": "Save",
                    "type": "Button",
                    "id": "fc2eeb11-d05f-48ca-9101-cae5931e4e2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Load",
                    "type": "Button",
                    "id": "f2cd3218-d9f4-40db-9136-1b9b471d473f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9e169b1-7a1f-4715-9b35-74e5964e4585",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Save",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f99653b-33b2-4c67-b7ac-0e6d4023767a",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Load",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "c48d046e-aa6f-4a18-9cd2-f7cb203d582e",
            "actions": [
                {
                    "name": "Open",
                    "type": "Button",
                    "id": "6b15c1ce-27a8-41e2-b2d2-76033910cbe8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Close",
                    "type": "Button",
                    "id": "f3eaf88d-ed59-4347-b3c2-cc9cb6949043",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b929eb9f-1d65-4273-9f16-ea53da83bf27",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "546b4b0f-b0b4-4c2d-b1ba-6326c5946554",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4dd406b-f571-483a-a95c-3b3ad559de8e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SkillPanel",
            "id": "a7465181-5f29-45ab-b663-5a0412690d59",
            "actions": [
                {
                    "name": "OpenSkillPanel",
                    "type": "Button",
                    "id": "4ca6de8a-c790-4771-93f2-042aae0c4061",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CloseSkillPanel",
                    "type": "Button",
                    "id": "38da2895-674e-4cac-873e-3a1cfc5400a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "83b92db6-3c97-4940-88a0-f4cb194882d5",
                    "path": "<Keyboard>/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenSkillPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74313cb1-731a-40a6-94ec-babe47d67df8",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CloseSkillPanel",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}